Updated four Contact-me links
Updated four Contact-me links

--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
 
 <footer class="section-4">
     <div id="contact-me-text">
-        <img src="fb.png" alt="">
+        <img src="fb.png" alt="Facebook">
 
-        <a href="https://google.com">Facebook</a>
-        <img src="insta.png" alt="">
+        <a href="https://facebook.com">Facebook</a>
+        <img src="insta.png" alt="Instagram">
 
-        <a href="https://google.com">Instagram</a>
-        <img src="linkedin.png" alt="">
+        <a href="https://instagram.com">Instagram</a>
+        <img src="linkedin.png" alt="Linked-in">
 
-        <a href="https://google.com">Linked-in</a>
-        <img src="email.png" alt="">
+        <a href="https://au.linkedin.com/">Linked-in</a>
+        <img src="email.png" alt="Email">
 
-        <a href="https://google.com">Email</a>
+        <a href="mailto: zafar_fast@hotmail.com">Email</a>
     </div>
 </footer>
 
