Updated Contact me links
Updated Contact me links

--- a/index.html
+++ b/index.html
@@ -99,18 +99,19 @@
 
 <footer class="section-4">
     <div id="contact-me-text">
-        <img src="fb.png" alt="Facebook">
-
+        
+        <a href="https://facebook.com"><img src="fb.png" alt="Facebook"></a>
         <a href="https://facebook.com">Facebook</a>
-        <img src="insta.png" alt="Instagram">
 
+        <a href="https://instagram.com"><img src="insta.png" alt="Instagram"></a>
         <a href="https://instagram.com">Instagram</a>
-        <img src="linkedin.png" alt="Linked-in">
 
+        <a href="https://au.linkedin.com/"><img src="linkedin.png" alt="Linked-in"></a>
         <a href="https://au.linkedin.com/">Linked-in</a>
-        <img src="email.png" alt="Email">
 
+        <a href="mailto: zafar_fast@hotmail.com"><img src="email.png" alt="Email"></a>
         <a href="mailto: zafar_fast@hotmail.com">Email</a>
+
     </div>
 </footer>
 
