Added id to Contact-me texts
Added id to Contact-me texts

--- a/index.html
+++ b/index.html
@@ -101,16 +101,18 @@
     <div id="contact-me-text">
         
         <a href="https://facebook.com"><img src="fb.png" alt="Facebook"></a>
-        <a href="https://facebook.com">Facebook</a>
+        <a id = "hide-text" href="https://facebook.com">Facebook</a>
 
         <a href="https://instagram.com"><img src="insta.png" alt="Instagram"></a>
-        <a href="https://instagram.com">Instagram</a>
+        <a id = "hide-text" href="https://instagram.com">Instagram</a>
 
         <a href="https://au.linkedin.com/"><img src="linkedin.png" alt="Linked-in"></a>
-        <a href="https://au.linkedin.com/">Linked-in</a>
+        <a id = "hide-text" href="https://au.linkedin.com/">Linked-in</a>
 
         <a href="mailto: zafar_fast@hotmail.com"><img src="email.png" alt="Email"></a>
-        <a href="mailto: zafar_fast@hotmail.com">Email</a>
+        <a id = "hide-text" href="mailto: zafar_fast@hotmail.com">Email</a>
+
+    </div>
 
     </div>
 </footer>
